--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,18 +20,40 @@
                             <a class="nav-link" href="#">Contact</a>
                         </li>
                     </ul>
+                        <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_login') }}">Login</a>
+                        </li>
+                        {% if app.user %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+                        </li>
+                        {% endif %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_register') }}">Register</a>
+                        </li>
+                    </ul>
                 </div>
             </nav>
         </header>
 
         <div class="jumbotron">
             <div class="container">
-                <h1 class="display-4">hoi!</h1>
+                <h1 class="display-4"></h1>
             </div>
         </div>
     </head>
     <body>
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+            <script src=
+                    "https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
+            </script>
+            <script src=
+                    "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js">
+            </script>
+            <script src=
+                    "https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
+            </script> {% endblock %}
     </body>
 </html>
