--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,7 @@
                             <a class="nav-link" href="{{ path('default') }}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="{{ path('product_index') }}">Crud</a>
                         </li>
                     </ul>
                         <ul class="navbar-nav ml-auto">
